@@ -14,7 +14,7 @@ rra-appointment-from-vevent, rra-appointment-to-vevent, rra-contact-from-vcard, 
 
 \fBrra-decode\fR \fIFILE\fR
 
-\fBrra-delete\fR \fITYPE-ID\fR \fIOBJECT-ID\fR
+\fBrra-delete\fR [-d \fILEVEL\fR] \fITYPE-ID\fR \fIOBJECT-ID\fR ...
 
 \fBrra-get-data\fR [-d \fILEVEL\fR] \fITYPE-ID\fR \fIOBJECT-ID\fR \fIFILENAME\fR
 
@@ -26,7 +26,7 @@ rra-appointment-from-vevent, rra-appointment-to-vevent, rra-contact-from-vcard, 
 
 \fBrra-put-data\fR \fITYPE-ID\fR \fIOBJECT-ID\fR \fIFLAGS\fR \fIFILENAME\fR
 
-\fBrra-subscribe\fR [\fITYPE-ID\fR] [\fITYPE-ID\fR] ...
+\fBrra-subscribe\fR [-d \fILEVEL\fR] [\fITYPE-ID\fR] [\fITYPE-ID\fR] ...
 
 \fBrra-task-from-vtodo\fR [-d \fILEVEL\fR] [-c \fICODEPAGE\fR] [-u] [-t \fITZFILE\fR] \fIVTODO_FILE\fR \fITASK_FILE\fR
 
